--- a/index.html
+++ b/index.html
@@ -242,14 +242,14 @@
       <div class="content mt-5">
         <h1
           style="text-align:center; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: bolder; font-size: 100px;">
-          SELLX <span class="text-danger"> Shop</span></h1>
+          SELLX <span class="text-danger"> Bulk</span></h1>
       </div>
       <div class="product-container">
         <div class="grids">
 
           <!-- Copy this -->
           <div class="grid">
-            <a class="card" data-shoppy-product="">
+            <a class="card" data-shoppy-product="62494e8d74dca">
               <div class="wrapper">
                 <div class="image-wrapper">
                   <img src="images/spotify.png">
@@ -270,27 +270,7 @@
 
 
           <div class="grid">
-            <a class="card" data-shoppy-product="">
-              <div class="wrapper">
-                <div class="image-wrapper">
-                  <img src="images/onlyfanscc.png">
-                </div>
-              </div>
-              <div class="content">
-                <span class="title">Onlyfans + CC</span>
-                <span class="description"></span>
-                <div class="card-footer">
-                  <button class="button style3 fit" data-sellix-product="621803c5839c5" type="submit"
-                    alt="Buy Now">Buy</button>
-                  <span class="price">5.00 <span>USD</span></span>
-                </div>
-              </div>
-            </a>
-          </div>
-
-
-          <div class="grid">
-            <a class="card" data-shoppy-product="">
+            <a class="card" data-shoppy-product="62494bf142729">
               <div class="wrapper">
                 <div class="image-wrapper">
                   <img src="images/netflix.png">
@@ -309,7 +289,7 @@
 
 
           <div class="grid">
-            <a class="card" data-shoppy-product="">
+            <a class="card" data-shoppy-product="62494af5b4bef">
               <div class="wrapper">
                 <div class="image-wrapper">
                   <img src="images/netflix.png">
@@ -327,7 +307,7 @@
           </div>
 
           <div class="grid">
-            <a class="card" data-shoppy-product="">
+            <a class="card" data-shoppy-product="626eeebcaf3fc">
               <div class="wrapper">
                 <div class="image-wrapper">
                   <img src="images/disneyplus.png">
@@ -337,15 +317,15 @@
                 <span class="title">Disney+</span>
                 <span class="description"></span>
                 <div class="card-footer">
-                  <button class="button style3 fit" data-sellix-product="6218045e3d30a" type="submit" alt="Buy Now">Buy</button>
-                  <span class="price">1.50 <span>EUR</span></span>
+                  <button class="button style3 fit" data-sellix-product="626eeebcaf3fc" type="submit" alt="Buy Now">Buy</button>
+                  <span class="price">0.30 <span>USD</span></span>
                 </div>
               </div>
             </a>
           </div>
 
           <div class="grid">
-            <a class="card" data-shoppy-product="">
+            <a class="card" data-shoppy-product="626eece2804dc">
               <div class="wrapper">
                 <div class="image-wrapper">
                   <img src="images/nordpvn.png">
@@ -355,47 +335,67 @@
                 <span class="title">NordVPN</span>
                 <span class="description"></span>
                 <div class="card-footer">
-                  <button class="button style3 fit" data-sellix-product="62180460c22a1" type="submit" alt="Buy Now">Buy</button>
-                  <span class="price">1.50 <span>EUR</span></span>
+                  <button class="button style3 fit" data-sellix-product="626eece2804dc" type="submit" alt="Buy Now">Buy</button>
+                  <span class="price">0.35 <span>USD</span></span>
+                </div>
+              </div>
+            </a>
+          </div>
+
+
+          <div class="grid">
+            <a class="card" data-shoppy-product="6249509cea41e">
+              <div class="wrapper">
+                <div class="image-wrapper">
+                  <img src="images/Crunchyroll.jpg">
+                </div>
+              </div>
+              <div class="content">
+                <span class="title">Crunchyroll</span>
+                <span class="description"></span>
+                <div class="card-footer">
+                  <button class="button style3 fit" data-sellix-product="6249509cea41e" type="submit" alt="Buy Now">Buy</button>
+                  <span class="price">0.40 <span>USD</span></span>
                 </div>
               </div>
             </a>
           </div>
           <div class="grid">
-            <a class="card" data-shoppy-product="">
+            <a class="card" data-shoppy-product="626ef4a907820">
               <div class="wrapper">
                 <div class="image-wrapper">
-                  <img src="images/ipvanish.png">
+                  <img src="images/windows11.jpg">
                 </div>
               </div>
               <div class="content">
-                <span class="title">IPVanish</span>
+                <span class="title">Windows 11</span>
                 <span class="description"></span>
                 <div class="card-footer">
-                  <button class="button style3 fit" data-sellix-product="62180461b238d" type="submit" alt="Buy Now">Buy</button>
-                  <span class="price">1.50 <span>EUR</span></span>
+                  <button class="button style3 fit" data-sellix-product="626ef4a907820" type="submit" alt="Buy Now">Buy</button>
+                  <span class="price">1.00 <span>USD</span></span>
                 </div>
               </div>
             </a>
           </div>
 
           <div class="grid">
-            <a class="card" data-shoppy-product="">
+            <a class="card" data-shoppy-product="626ef437b9a99">
               <div class="wrapper">
                 <div class="image-wrapper">
-                  <img src="images/windscribe.png">
+                  <img src="images/windows10.jpg">
                 </div>
               </div>
               <div class="content">
-                <span class="title">Windscribe</span>
+                <span class="title">windows10</span>
                 <span class="description"></span>
                 <div class="card-footer">
-                  <button class="button style3 fit" data-sellix-product="61c81515a2681" type="submit" alt="Buy Now">Buy</button>
-                  <span class="price">1.00 <span>EUR</span></span>
+                  <button class="button style3 fit" data-sellix-product="626ef437b9a99" type="submit" alt="Buy Now">Buy</button>
+                  <span class="price">1.12 <span>USD</span></span>
                 </div>
               </div>
             </a>
           </div>
+
         </div>
       </div>
       <a class="discord" href="https://discord.com" target="_blank">
