--- a/faq/index.html
+++ b/faq/index.html
@@ -24,7 +24,7 @@
 </head>
 <body><nav>
 <div class="nav-wrapper">
-<img class="brand-logo" src="../images" height="45px">
+<img class="brand-logo" src="../images/logo.png" height="45px">
 <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 <ul class="nav-container left hide-on-med-and-down">
 <li><a href="../index.html">Products</a></li>
@@ -68,7 +68,7 @@
 <li>Check the email from which you paid for the purchase.</li>
 <li>Probably your order status is pending and you will receive an account when the payment is
 completed you can see the exact date in PayPal.</li>
-<li>Contact us and we will help you. To get your account as quickly as possible, please provide
+<li>You can Contact us any time telegram : @selxaz and we will help you. To get your account as quickly as possible, please provide
 us
 with your email address you entered when purchasing your account</li>
 </ul>
@@ -95,7 +95,7 @@ with your email address you entered when purchasing your account</li>
 <span class="question">6. I got an account but it doesn't work. What should I do?</span>
 <div class="question-description">
 <ul>
-<li>Contact us and get a replacement.</li>
+<li>Contact us and get a replacement. ( telegram @selxaz ) </li>
 <li>To get a replacement as quickly as possible, please provide us with the order ID
 information.</li>
 </ul>
@@ -105,7 +105,7 @@ information.</li>
 <span class="question">7. How can I contact support?</span>
 <div class="question-description">
 <ul>
-<li><a href="https://discord.com/invite/66Rwx967">Click Here!</a></li>
+<li><a href="https://t.me/selxaz">Click Here!</a></li>
 </ul>
 </div>
 </div>
@@ -138,15 +138,15 @@ information.</li>
 <span class="question">11. How i get a Service after i paid?</span>
 <div class="question-description">
 <ul>
-<li> simply just open a ticket here <a href="https://discord.com" target="_blank">our Discord server</a> and send an image of your invoice and we do the rest.</li>
+<li> simply just open a ticket here <a href="https://t.me/selxaz" target="_blank">our telegram </a> and send an image of your invoice and we do the rest.</li>
 <li>that all.</li>
 </ul>
 </div>
 </div>
 </div>
 </div>
-<a class="discord" href="https://discord.com" target="_blank">
-<img src="../images/discord.png">
+<a class="discord" href="https://t.me/selxaz" target="_blank">
+<img src="../images/telegram.png">
 </a>
 <div class="footer">
 <div class="footer-container">
