--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <meta name="theme-color" content="#181818">
   <title>Slxlv</title>
-  <link rel="icon" type="image/png" href="./images">
+  <link rel="icon" type="image/png" href="./images/logo.png">
   <meta name="description" content="Best cheap shop">
   <meta name="keywords" content="cheapest shop, cheap shop, cheap">
   <link rel="canonical" href="https://sellx.live/">
@@ -398,8 +398,8 @@
 
         </div>
       </div>
-      <a class="discord" href="https://discord.com" target="_blank">
-        <img src="images/discord.png">
+      <a class="discord" href="https://t.me/selxaz" target="_blank">
+        <img src="images/telegram.png">
       </a>
       <div class="footer">
         <div class="footer-container">
